<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lo_add_topic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.adder.AddTopicActivity">

    <TextView
        android:id="@+id/txt_add_topic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/new_topic"
        android:textAlignment="textStart"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/et_topic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/topic_name"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/sw_is_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:text="@string/is_test"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_topic_back"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fui_bgGoogle"
            android:text="@string/back" />

        <Button
            android:id="@+id/button_add_topic_add_pages"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:enabled="false"
            android:foregroundGravity="bottom|center"
            android:text="@string/set_pages"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>